--- a/views/styles/dashboardStyle.css
+++ b/views/styles/dashboardStyle.css
@@ -26,6 +26,9 @@ body {
     border-right: 1px solid black;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .logo-container {
