--- a/views/styles/ordersStyle.css
+++ b/views/styles/ordersStyle.css
@@ -1,7 +1,7 @@
 #container-of-dashboard-of-orders {
     width: 100%;
     height: 100%;
-    background-color: red;
+    /* background-color: red; */
     overflow: scroll;
     scrollbar-width: none;
 }
@@ -9,14 +9,14 @@
 #dashboard-of-all-products-in-container-of-dashboard-of-orders {
     width: 100%;
     height: 50%;
-    background-color: rgb(47, 0, 255);
+    /* background-color: rgb(47, 0, 255); */
     margin-top: 10px;
 }
 
 #dashboard-of-all-orders-in-container-of-dashboard-of-orders {
     width: 100%;
     height: 50%;
-    background-color: rgb(37, 42, 42);
+    /* background-color: rgb(37, 42, 42); */
     margin-top: 10px;
 }
 
@@ -27,12 +27,13 @@
     align-items: center;
     display: flex;
     background-color: black;
+    color: white;
 }
 
 .part-of-add-new-order-in-head-of-dashboard-in-container-of-dashboard-of-orders {
     height: 100%;
     width: 9%;
-    background-color: goldenrod;
+    /* background-color: goldenrod; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,8 +43,15 @@
 .part-of-name-in-head-of-dashboard-in-container-of-dashboard-of-orders {
     height: 100%;
     width: 89%;
-    background-color: rgb(218, 32, 206);
+    /* background-color: rgb(218, 32, 206); */
     justify-content: center;
     align-items: center;
     display: flex;
+}
+
+#container-of-show-current-products-in-dashboard-of-all-products-in-container-of-dashboard-of-orders {
+    width: 100%;
+    height: max-content;
+    background-color: antiquewhite;
+    border-bottom: 1px solid black;
 }
